Implement file-based API key storage
- Create api_key.txt to store Google Cloud AI API key
- Add api_key.txt to .gitignore to prevent accidental commits
- Modify script to read API key from file by default
- Maintain command line override capability
- Improve security by keeping API keys out of version control
- Add comprehensive error handling for file reading

--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,12 @@ example_note_paper_color_analysis.png
 *.bmp
 *.tiff
 
+# API Keys and Secrets
+api_key.txt
+*.key
+*.pem
+secrets/
+
 # System Files
 .DS_Store
 .DS_Store?
